# FlareSolverr

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  package.json  pyproject.toml
src/: build_package.py  dtos.py  flaresolverr.py  flaresolverr_service.py  metrics.py  sessions.py  tests.py  tests_sites.py  utils.py
src/bottle_plugins/: error_plugin.py  logger_plugin.py  prometheus_plugin.py
