[project]
name = "flaresolverr"
version = "3.5.0"
description = "Proxy server to bypass Cloudflare and DDoS-GUARD protection"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Diego Heras", email = "ngosang@hotmail.es" },
]
requires-python = ">=3.11"
keywords = ["cloudflare", "bypass", "proxy", "scraping", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bottle==0.13.4",
    "waitress==3.0.2",
    "zendriver>=0.15.3",
    "prometheus-client==0.23.1",
    "certifi>=2025.1.31",
    "websockets>=15.0.1",
    "packaging>=25.0",
    "xvfbwrapper>=0.2.9 ; sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://github.com/FlareSolverr/FlareSolverr"
Documentation = "https://github.com/FlareSolverr/FlareSolverr#readme"
Repository = "https://github.com/FlareSolverr/FlareSolverr"
Issues = "https://github.com/FlareSolverr/FlareSolverr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "WebTest>=3.0.7",
]

[tool.uv]
package = false

[tool.uv.sources]
